# yadl

./: .gitignore  LICENSE  README.md  pyproject.toml
yadl/: activation.py  layer.py  loss.py  network.py  optimiser.py
